--- a/package.json
+++ b/package.json
@@ -1,13 +1,38 @@
 {
   "scripts": {
+    "start": "node dist/index.js",
     "build": "tsc"
   },
   "devDependencies": {
-    "@types/graphql": "^0.13.1",
+    "@types/chai": "^4.1.2",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/express": "^4.11.1",
+    "@types/mocha": "^5.2.0",
+    "@types/node": "^9.6.6",
+    "@types/sinon": "^4.3.1",
+    "@types/sinon-chai": "^2.7.29",
+    "@types/supertest": "^2.0.4",
+    "@types/ws": "^4.0.2",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.4",
+    "mocha": "^5.1.1",
+    "mocha-jenkins-reporter": "^0.3.12",
+    "prettier": "^1.12.1",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0",
+    "supertest": "^3.0.0",
+    "ts-node": "^6.0.0",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.12.0",
+    "tslint-config-standard": "^7.0.0",
+    "tslint-microsoft-contrib": "^5.0.3",
     "typescript": "^2.8.1"
   },
   "dependencies": {
-    "graphql": "^0.13.0",
-    "graphql-binding": "^2.0.0"
-  }
+    "graphql-yoga": "^1.13.1",
+    "prisma-binding": "^2.0.0"
+  },
+  "license": "UNLICENSED"
 }
