--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,23 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "esModuleInterop": true,
     "target": "es6",
-    "noImplicitAny": true,
-    "lib":["esnext"]
-  }
+    "strict": true,
+    "noImplicitAny": false,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ]
+    },
+    "lib":["dom", "es6","dom.iterable", "scripthost", "esnext"]
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
